# sokol-with-cmake-not-fips

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  run.py
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp
